Fixed regridding script

--- a/plot_CESM2_siconc_original_regrid.ipynb
+++ b/plot_CESM2_siconc_original_regrid.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2bd09345-3e3f-40ba-8a3e-07f769be8421",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "import geocat.viz.util as gvutil"
+    "#import geocat.viz.util as gvutil"
    ]
   },
   {
@@ -53,21 +53,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "86561385-b5b6-46a0-8ae7-8f75e442803a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "did not find a match in any of xarray's currently installed IO backends ['scipy']. Consider explicitly selecting one of the installed backends via the ``engine`` parameter to xarray.open_dataset(), or installing additional IO dependencies:\nhttp://xarray.pydata.org/en/stable/getting-started-guide/installing.html\nhttp://xarray.pydata.org/en/stable/user-guide/io.html",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-295d720bd134>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Original data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdirec_og\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/Users/pade7652/Google Drive/CUBoulder/Projects/CESM2/Data/CESM2-CMIP6/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mxdi_og\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirec_og\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'siconc_SImon_CESM2_historical_r1i1p1f1_gn_185001-201412.nc'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# The 'chunks' option above tells xarray to make this a dask array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxdi_og\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/geocat/lib/python3.7/site-packages/xarray/backends/api.py\u001b[0m in \u001b[0;36mopen_dataset\u001b[0;34m(filename_or_obj, engine, chunks, cache, decode_cf, mask_and_scale, decode_times, decode_timedelta, use_cftime, concat_characters, decode_coords, drop_variables, backend_kwargs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 480\u001b[0;31m         \u001b[0mengine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplugins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mguess_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename_or_obj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    481\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    482\u001b[0m     \u001b[0mbackend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplugins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_backend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/geocat/lib/python3.7/site-packages/xarray/backends/plugins.py\u001b[0m in \u001b[0;36mguess_engine\u001b[0;34m(store_spec)\u001b[0m\n\u001b[1;32m    110\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minstalled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m         raise ValueError(\n\u001b[0;32m--> 112\u001b[0;31m             \u001b[0;34m\"did not find a match in any of xarray's currently installed IO \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m             \u001b[0;34mf\"backends {installed}. Consider explicitly selecting one of the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0;34m\"installed backends via the ``engine`` parameter to \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: did not find a match in any of xarray's currently installed IO backends ['scipy']. Consider explicitly selecting one of the installed backends via the ``engine`` parameter to xarray.open_dataset(), or installing additional IO dependencies:\nhttp://xarray.pydata.org/en/stable/getting-started-guide/installing.html\nhttp://xarray.pydata.org/en/stable/user-guide/io.html"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pade7652/opt/anaconda3/envs/regrid_env/lib/python3.7/site-packages/xarray/conventions.py:520: SerializationWarning: variable 'siconc' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
+      "  decode_timedelta=decode_timedelta,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.Dataset>\n",
+      "Dimensions:    (d2: 2, ni: 320, nj: 384, nvertices: 4, time: 1980)\n",
+      "Coordinates:\n",
+      "    lat        (nj, ni) float64 dask.array<chunksize=(384, 320), meta=np.ndarray>\n",
+      "    lon        (nj, ni) float64 dask.array<chunksize=(384, 320), meta=np.ndarray>\n",
+      "  * ni         (ni) int32 1 2 3 4 5 6 7 8 9 ... 313 314 315 316 317 318 319 320\n",
+      "  * nj         (nj) int32 1 2 3 4 5 6 7 8 9 ... 377 378 379 380 381 382 383 384\n",
+      "  * time       (time) object 1850-01-15 12:00:00 ... 2014-12-15 12:00:00\n",
+      "Dimensions without coordinates: d2, nvertices\n",
+      "Data variables:\n",
+      "    siconc     (time, nj, ni) float32 dask.array<chunksize=(1980, 384, 320), meta=np.ndarray>\n",
+      "    time_bnds  (time, d2) object dask.array<chunksize=(1980, 2), meta=np.ndarray>\n",
+      "    lat_bnds   (nj, ni, nvertices) float32 dask.array<chunksize=(384, 320, 4), meta=np.ndarray>\n",
+      "    lon_bnds   (nj, ni, nvertices) float32 dask.array<chunksize=(384, 320, 4), meta=np.ndarray>\n",
+      "Attributes: (12/45)\n",
+      "    Conventions:            CF-1.7 CMIP-6.2\n",
+      "    activity_id:            CMIP\n",
+      "    case_id:                15\n",
+      "    cesm_casename:          b.e21.BHIST.f09_g17.CMIP6-historical.001\n",
+      "    contact:                cesm_cmip6@ucar.edu\n",
+      "    creation_date:          2019-01-17T00:39:18Z\n",
+      "    ...                     ...\n",
+      "    sub_experiment:         none\n",
+      "    sub_experiment_id:      none\n",
+      "    branch_time_in_parent:  219000.0\n",
+      "    branch_time_in_child:   674885.0\n",
+      "    branch_method:          standard\n",
+      "    further_info_url:       https://furtherinfo.es-doc.org/CMIP6.NCAR.CESM2.h...\n",
+      "<xarray.Dataset>\n",
+      "Dimensions:  (time: 1980, x: 361, y: 179)\n",
+      "Coordinates:\n",
+      "    lat      (y, x) float64 ...\n",
+      "    lon      (y, x) float64 ...\n",
+      "  * time     (time) object 1850-01-15 12:00:00 ... 2014-12-15 12:00:00\n",
+      "Dimensions without coordinates: x, y\n",
+      "Data variables:\n",
+      "    siconc   (time, y, x) float64 ...\n",
+      "Attributes:\n",
+      "    model:        CESM2\n",
+      "    Description:  historical siconc r1i1p1f1 regridded onto a rectilinear 1.0...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pade7652/opt/anaconda3/envs/regrid_env/lib/python3.7/site-packages/xarray/conventions.py:520: SerializationWarning: variable 'siconc' has multiple fill values {1.0000000200408773e+20, 1e+20}, decoding all values to NaN.\n",
+      "  decode_timedelta=decode_timedelta,\n"
      ]
     }
    ],
@@ -81,7 +130,6 @@
     "direc_rg = '/Users/pade7652/Google Drive/CUBoulder/Projects/Summer2021_Patricia/Data/'\n",
     "xdi_rg   = xr.open_dataset(direc_rg+'CESM2_siconc_hist_r1i1p1f1_xesmf_rg_1x1.nc')\n",
     "print(xdi_rg)\n",
-    "\n",
     "\n",
     "# data0 = ds.T.isel(time=0, drop=True).isel(z_t=0, drop=True)\n",
     "# data1 = ds.T.isel(time=0, drop=True).isel(z_t=5, drop=True)\n",
@@ -121,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
